--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@astrojs/react": "^4.4.0",
     "@astrojs/tailwind": "^5.1.5",
-    "astro": "^5.1.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
@@ -19,5 +18,8 @@
     "react-dom": "^19.2.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "astro": "^5.14.4"
   }
 }
