--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.4.0",
     "@astrojs/tailwind": "^5.1.5",
+    "astro": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
@@ -18,9 +19,6 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.6.3"
-  },
-  "devDependencies": {
-    "astro": "^5.0.0"
   },
   "engines": {
     "node": ">=18.17.0"
