--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "build": "npx --yes astro build",
+    "build": "npx astro build",
     "preview": "astro preview"
   },
   "dependencies": {
