--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,24 @@
 {
+  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strict": true,
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
-    "target": "ES2020",
     "jsx": "preserve",
-    "baseUrl": "."
-  }
+    "jsxImportSource": "react",
+    "allowJs": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": [
+    "src",
+    "astro.config.mjs",
+    "env.d.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
